--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: r
 r_packages:
  - devtools
 
+r_gitub_packages:
+ - rqtl/qtl2geno
+ - rqtl/qtl2scan
+
 warnings_are_errors: true
 
 sudo: required
