--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qtl2convert
-Version: 0.1-2
+Version: 0.1-3
 Date: 2016-03-15
 Title: Convert Data among R/qtl2, R/qtl, and DOQTL
 Description: Functions to convert data structures among the R/qtl2, R/qtl, and DOQTL packages.
@@ -10,7 +10,10 @@ Depends:
 Suggests:
     testthat,
     devtools,
-    roxygen2
+    roxygen2,
+    qtl,
+    qtl2geno,
+    qtl2scan
 License: GPL-3
 URL: https://github.com/rqtl/qtl2convert
 LazyData: true
