--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: qtl2convert
-Version: 0.1-4
-Date: 2016-03-17
+Version: 0.1-5
+Date: 2016-05-24
 Title: Convert Data among R/qtl2, R/qtl, and DOQTL
 Description: Functions to convert data structures among the R/qtl2, R/qtl, and DOQTL packages.
 Author: Karl W Broman <kbroman@biostat.wisc.edu>
 Maintainer: Karl W Broman <kbroman@biostat.wisc.edu>
 Depends:
     R (>= 3.1.0)
+Imports:
+    Rcpp (>= 0.12.1)
 Suggests:
     testthat,
     devtools,
@@ -16,5 +18,6 @@ Suggests:
     qtl2scan
 License: GPL-3
 URL: https://github.com/rqtl/qtl2convert
+LinkingTo: Rcpp
 LazyData: true
 RoxygenNote: 5.0.1
