--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(encode_geno)
 export(find_consensus_geno)
+export(find_unique_geno)
 export(map_df_to_list)
 export(map_list_to_df)
 export(probs_doqtl_to_qtl2)
