--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(map_df_to_list)
 export(map_list_to_df)
 export(probs_doqtl_to_qtl2)
 export(scan_qtl2_to_qtl)
+export(write2csv)
 importFrom(Rcpp,sourceCpp)
+importFrom(utils,write.table)
 useDynLib(qtl2convert)
