Small changes to avoid Note about "R_registerRoutines"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,4 @@ export(scan_qtl2_to_qtl)
 export(write2csv)
 importFrom(Rcpp,sourceCpp)
 importFrom(utils,write.table)
-useDynLib(qtl2convert)
+useDynLib(qtl2convert, .registration=TRUE)
