--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(probs_qtl_to_qtl2)
 export(scan_qtl2_to_qtl)
 export(write2csv)
 importFrom(Rcpp,sourceCpp)
+importFrom(qtl,getgenonames)
 importFrom(qtl,getsex)
 importFrom(qtl,nind)
 importFrom(stats,setNames)
