--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(scan_qtl2_to_qtl)
 export(write2csv)
 importFrom(Rcpp,sourceCpp)
 importFrom(qtl,getgenonames)
+importFrom(qtl,getid)
 importFrom(qtl,getsex)
 importFrom(qtl,nind)
 importFrom(stats,setNames)
