--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ URL: http://kbroman.org/qtl2, https://github.com/rqtl/qtl2convert
 BugReports: https://github.com/rqtl/qtl2convert/issues
 LinkingTo: Rcpp
 LazyData: true
+Encoding: UTF-8
 RoxygenNote: 6.0.1
 Remotes:
     rqtl/qtl2geno,
