--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(find_unique_geno)
 export(map_df_to_list)
 export(map_list_to_df)
 export(probs_doqtl_to_qtl2)
+export(probs_qtl2_to_array)
 export(probs_qtl2_to_doqtl)
 export(probs_qtl_to_qtl2)
 export(scan_qtl2_to_qtl)
