--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: qtl2convert
-Version: 0.7-1
-Date: 2017-11-28
+Version: 0.7-2
+Date: 2017-12-05
 Title: Convert Data among R/qtl2, R/qtl, and DOQTL
 Description: Functions to convert data structures among the R/qtl2, R/qtl, and DOQTL packages.
 Author: Karl W Broman <kbroman@biostat.wisc.edu>
@@ -10,7 +10,8 @@ Depends:
 Imports:
     Rcpp (>= 0.12.12),
     qtl (>= 1.40-8),
-    utils
+    utils,
+    stats
 Suggests:
     testthat,
     devtools,
