--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(qtl,getgenonames)
 importFrom(qtl,getid)
 importFrom(qtl,getsex)
 importFrom(qtl,nind)
+importFrom(qtl2,batch_vec)
 importFrom(stats,setNames)
 importFrom(utils,write.table)
 useDynLib(qtl2convert, .registration=TRUE)
