Add function scan_qtl_to_qtl2()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(probs_qtl2_to_array)
 export(probs_qtl2_to_doqtl)
 export(probs_qtl_to_qtl2)
 export(scan_qtl2_to_qtl)
+export(scan_qtl_to_qtl2)
 export(write2csv)
 importFrom(Rcpp,sourceCpp)
 importFrom(qtl,getgenonames)
