--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(qtl,getid)
 importFrom(qtl,getsex)
 importFrom(qtl,nind)
 importFrom(qtl2,batch_vec)
+importFrom(qtl2,cbind_expand)
 importFrom(stats,setNames)
 importFrom(utils,write.table)
 useDynLib(qtl2convert, .registration=TRUE)
