--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: qtl2convert
-Version: 0.17-5
-Date: 2019-01-12
+Version: 0.18
+Date: 2019-02-08
 Title: Convert Data among R/qtl2, R/qtl, and DOQTL
 Description: Functions to convert data structures among the R/qtl2, R/qtl, and DOQTL packages.
 Author: Karl W Broman <broman@wisc.edu>
@@ -10,7 +10,7 @@ Depends:
 Imports:
     Rcpp (>= 0.12.12),
     qtl (>= 1.40-8),
-    qtl2 (>= 0.17-10),
+    qtl2 (>= 0.18),
     utils,
     stats
 Suggests:
