--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Suggests:
     devtools,
     roxygen2
 License: GPL-3
-URL: http://kbroman.org/qtl2, https://github.com/rqtl/qtl2convert
+URL: https://kbroman.org/qtl2/, https://github.com/rqtl/qtl2convert
 BugReports: https://github.com/rqtl/qtl2convert/issues
 LinkingTo: Rcpp
 Encoding: UTF-8
