--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cbind_smother)
 export(count_unique_geno)
 export(cross2_do_to_genail)
 export(cross2_do_to_genail8)
+export(cross2_ril_to_genril)
 export(encode_geno)
 export(find_consensus_geno)
 export(find_unique_geno)
